--- a/cursor-themes/Vanliga-Dark/Config.ini
+++ b/cursor-themes/Vanliga-Dark/Config.ini
@@ -11,9 +11,9 @@ IBeam=../Dark/i-beam.png
 Disallowed=../Dark/disallowed.png
 Move=../Dark/move.png
 Hand=../Dark/hand.x8y4.png
-Help=../Dark/help.x1y1.png
+Help=help.x4y4.png
 Drag=../Dark/drag.png
-Wait=../Dark/wait.f14t100.png
+Wait=wait.x4y4.png
 Crosshair=../Dark/crosshair.png
 Eyedropper=../Dark/eyedropper.x2y2.png
 Zoom=../Dark/zoom.x0y0.png
