Base: Update Vanliga config

--- a/cursor-themes/Vanliga/Config.ini
+++ b/cursor-themes/Vanliga/Config.ini
@@ -11,9 +11,9 @@ IBeam=../Default/i-beam.png
 Disallowed=../Default/disallowed.png
 Move=../Default/move.png
 Hand=../Default/hand.x8y4.png
-Help=../Default/help.x1y1.png
+Help=help.x4y4.png
 Drag=../Default/drag.png
-Wait=../Default/wait.f14t100.png
+Wait=wait.x4y4.png
 Crosshair=../Default/crosshair.png
 Eyedropper=../Default/eyedropper.x2y2.png
 Zoom=../Default/zoom.x0y0.png
