Base: Update CakePlacid theme fix tray colors

--- a/themes/CakePlacid.ini
+++ b/themes/CakePlacid.ini
@@ -6,8 +6,8 @@ ActiveWindowBorder2=#5e89a5ff
 ActiveWindowTitle=#eeeeecff
 ActiveWindowTitleShadow=#808080ff
 ActiveWindowTitleStripes=#00000000
-InactiveWindowBorder1=#b6babbff
-InactiveWindowBorder2=#c3c5c6ff
+InactiveWindowBorder1=#b7dfe3ff
+InactiveWindowBorder2=#b7dfe3ff
 InactiveWindowTitle=#000000ff
 InactiveWindowTitleShadow=#c3c5c6ff
 InactiveWindowTitleStripes=#00000000
@@ -35,9 +35,9 @@ Base=#f1faee
 BaseText=#111f33
 DisabledTextFront=#808080
 DisabledTextBack=#fafafa
-ThreedHighlight=#b3e8eb
-ThreedShadow1=#96c3c4
-ThreedShadow2=#96c3c4
+ThreedHighlight=#96c3c4ff
+ThreedShadow1=#a8dadcff
+ThreedShadow2=#96c3c4ff
 HoverHighlight=#b3e8ebff
 Selection=#b3e8ebff
 SelectionText=#111f33
@@ -70,8 +70,8 @@ SyntaxPreprocessorStatement=#008080
 SyntaxPreprocessorValue=#800000
 Tooltip=#fcf6bd
 TooltipText=#242424
-Tray=#457b9d
-TrayText=#3a6aad
+Tray=#457b9dff
+TrayText=#eeeeecff
 
 [Alignments]
 TitleAlignment=Center
